--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-REACT_APP_FIREBASE_API_KEY=1234
-REACT_APP_FIREBASE_AUTH_DOMAIN=1234
-REACT_APP_FIREBASE_PROJECT_ID=1234
-REACT_APP_FIREBASE_STORAGE_BUCKET=1234
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1234
-REACT_APP_FIREBASE_APP_ID=1234
-REACT_APP_FIREBASE_MEASUREMENT_ID=1234
+# Firebase Configuration
+VITE_PUBLIC_FIREBASE_API_KEY=your-firebase-api-key
+VITE_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
+VITE_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
+VITE_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
+VITE_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id
+VITE_PUBLIC_FIREBASE_APP_ID=your-app-id
+
+# API URL
+VITE_API_URL=http://localhost:5000/api
