--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,20 +22,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: client/package-lock.json
-      
+
       - name: Install dependencies
-        run: cd client && npm ci
-      
+        run: |
+          cd client
+          # Use npm install instead of npm ci to handle platform-specific dependencies
+          npm install --no-optional
+
       - name: Build
         run: cd client && npm run build
-      
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
