--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,9 @@
 		"@rollup/rollup-win32-x64-msvc": "^4.40.0",
 		"axios": "^1.8.4",
 		"firebase": "^11.6.0"
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-win32-x64-msvc": "^4.40.0",
+		"@rollup/rollup-linux-x64-gnu": "^4.40.0"
 	}
 }
