--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,28 +20,46 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: client/package-lock.json
-
-      - name: Clean install dependencies
+      
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: false
+      
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+      
+      - name: Setup pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+      
+      - name: Install dependencies
         run: |
           cd client
-          rm -rf node_modules package-lock.json
-          npm install
-
-      - name: Install platform-specific Rollup
+          pnpm install --no-frozen-lockfile
+      
+      - name: Downgrade Rollup
         run: |
           cd client
-          npm install @rollup/rollup-linux-x64-gnu
-
+          pnpm remove rollup
+          pnpm add rollup@3.29.4
+      
       - name: Build
-        run: cd client && npm run build
-
+        run: cd client && pnpm run build
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
