--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,11 +5,13 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -26,19 +28,19 @@ jobs:
         with:
           node-version: '20'
       
-      - name: Create Rollup resolver file
-        run: |
-          cd client
-          mkdir -p node_modules/rollup/dist
-          echo 'export default function() { return { name: "noop" }; }' > node_modules/rollup/dist/native.js
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
       
       - name: Install dependencies
         run: |
           cd client
-          npm install
+          rm -rf node_modules package-lock.json
+          pnpm install --no-frozen-lockfile
       
       - name: Build
-        run: cd client && npm run build
+        run: cd client && pnpm run build
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
