--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,58 +2,42 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
-      
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-      
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: ./client/package-lock.json
+
       - name: Install dependencies
-        run: |
-          cd client
-          rm -rf node_modules package-lock.json
-          pnpm install --no-frozen-lockfile
-      
+        run: cd client && npm ci
+
       - name: Build
-        run: cd client && pnpm run build
-      
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        run: cd client && npm run build
+        env:
+          # Add any environment variables your build needs
+          VITE_PUBLIC_FIREBASE_API_KEY: ${{ secrets.VITE_PUBLIC_FIREBASE_API_KEY }}
+          VITE_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_PUBLIC_FIREBASE_AUTH_DOMAIN }}
+          VITE_PUBLIC_FIREBASE_PROJECT_ID: ${{ secrets.VITE_PUBLIC_FIREBASE_PROJECT_ID }}
+          VITE_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.VITE_PUBLIC_FIREBASE_STORAGE_BUCKET }}
+          VITE_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.VITE_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
+          VITE_PUBLIC_FIREBASE_APP_ID: ${{ secrets.VITE_PUBLIC_FIREBASE_APP_ID }}
+          VITE_PUBLIC_API_BASE_URL: ${{ secrets.VITE_PUBLIC_API_BASE_URL }}
+
+      - name: Deploy to GitHub Pages
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./client/build
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v2
