--- a/client/.env
+++ b/client/.env
@@ -7,5 +7,5 @@ VITE_PUBLIC_FIREBASE_STORAGE_BUCKET=${FIREBASE_STORAGE_BUCKET}
 VITE_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=${FIREBASE_MESSAGING_SENDER_ID}
 VITE_PUBLIC_FIREBASE_APP_ID=${FIREBASE_APP_ID}
 
-# API URL - will be provided from GitHub secrets
-VITE_PUBLIC_API_BASE_URL=${API_BASE_URL}
+# API URL - direct connection to backend server
+VITE_PUBLIC_API_BASE_URL=http://157.180.75.112/api
