--- a/client/.env
+++ b/client/.env
@@ -8,4 +8,4 @@ VITE_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=${FIREBASE_MESSAGING_SENDER_ID}
 VITE_PUBLIC_FIREBASE_APP_ID=${FIREBASE_APP_ID}
 
 # API URL - direct connection to backend server
-VITE_PUBLIC_API_BASE_URL=http://157.180.75.112/api
+VITE_PUBLIC_API_BASE_URL=http://157.180.75.112
