--- a/client/.github/workflows/deploy.yml
+++ b/client/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           VITE_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.VITE_PUBLIC_FIREBASE_STORAGE_BUCKET }}
           VITE_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.VITE_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
           VITE_PUBLIC_FIREBASE_APP_ID: ${{ secrets.VITE_PUBLIC_FIREBASE_APP_ID }}
-          API_BASE_URL: ${{ secrets.API_BASE_URL }}
+          VITE_PUBLIC_API_BASE_URL: ${{ secrets.VITE_PUBLIC_API_BASE_URL }}
         run: npm run build
         
       - name: Deploy to GitHub Pages
