--- a/client/api-config.json
+++ b/client/api-config.json
@@ -1,10 +1,10 @@
 {
   "apiEndpoint": "http://localhost:80/api",
-  "productionEndpoint": "https://api.sleeptracker.domain/api",
+  "productionEndpoint": "https://api.chaidla.ee/api",
   "version": "1.0.0",
   "environment": "production",
   "corsSettings": {
-    "allowedOrigins": ["http://localhost:5173"],
+    "allowedOrigins": ["http://localhost:5173", "https://pilves.github.io"],
     "methods": ["GET", "POST", "PUT", "DELETE"],
     "allowedHeaders": ["Content-Type", "Authorization"],
     "credentials": true
